--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,6 +7,7 @@
             </h1>
             <a href="" id="vidBtn">Continuar con Facebook</a>
             <a href="" id="vidBtn1">Continuar con twitch</a>
+            <button (click)="submitLogin()">Continuar con Facebook</button>
             <a href="" id="vidBtn2">Continuar con youtube</a>
         </div>
     </div>
