--- a/src/app/components/streamer-dash/streamer-dash.component.html
+++ b/src/app/components/streamer-dash/streamer-dash.component.html
@@ -99,7 +99,7 @@
     <!-- video youtube-->
     <div id="video" class="video">
       <h4 id="live-text">En Vivo</h4>
-      <iframe width="560" height="315" [src]="getVideoIframeYoutube(urlYoutube)" frameborder="0"
+      <iframe width="560" height="315" [src]="urlYoutubeIframe" frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
   
