--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -60,3 +60,19 @@
     animation: shadow-pulse 2s infinite;
     text-transform: uppercase;
 }
+
+#vidBtn3{
+    font-family:  'Mada', sans-serif;
+    display: inline-block;
+    font-size: 16px;
+    padding: 12px 30px;
+    border: none;
+    background: #ffa500;
+    color: white;
+    cursor: pointer;
+    margin-top: 18px;
+    margin-left: 20px;
+    border-radius: 9px;
+    animation: shadow-pulse 2s infinite;
+    text-transform: uppercase;
+}
