--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -19,7 +19,9 @@
       <li class="nav-item">
         <a class="nav-link" [routerLink]="['politica-de-privacidad']">Politica de privacidad</a>
       </li>
+      <li class="nav-item" *ngIf="user">
+        <p class="nav-link">{{ user.name }}</p>
+      </li>
     </ul>
-
   </div>
 </nav>
