--- a/src/app/components/stream-card/stream-card.component.css
+++ b/src/app/components/stream-card/stream-card.component.css
@@ -1,13 +1,26 @@
-.cont{
+.cont {
     position: relative;
     border-radius: 1vh;
     border: solid;
     margin-left: 1vh;
     cursor: pointer;
+    z-index: 0;
+    width: 46vh;
+    height: 23.2vh;
+}
+
+.conts {
+    position: absolute;
+    border-radius: 1vh;
+    border: solid;
+    margin-left: 1vh;
+    cursor: pointer;
+    width: 46vh;
+    height: 23.2vh;
     z-index: 1;
 }
 
-iframe{
+iframe {
     position: relative;
     z-index: 0;
 }
