--- a/src/app/components/stream-card/stream-card.component.html
+++ b/src/app/components/stream-card/stream-card.component.html
@@ -1,3 +1,5 @@
   <div class="cont" (click)="watch()">
     <iframe [src]='url' frameborder=0></iframe>
   </div>
+  <div class="conts" (click)="watch()">
+  </div>
