adding viewers to stream

--- a/src/app/components/streamer-dash/streamer-dash.component.css
+++ b/src/app/components/streamer-dash/streamer-dash.component.css
@@ -64,6 +64,14 @@ button {
     height: 91.2vh;
 }
 
+p{
+    color: #fff;
+}
+
+.wallet{
+    margin-top: 2vh;
+}
+
 #viewers{
     position: absolute;
     display: flex;
