--- a/src/app/components/streamer-dash/streamer-dash.component.html
+++ b/src/app/components/streamer-dash/streamer-dash.component.html
@@ -5,12 +5,16 @@
         <button id="tooltip" data-toggle="tooltip" id="mainicon" type="button" data-toggle="modal"
           data-target="#exampleModal"><img src="assets/live.png" alt="" srcset=""></button>
         <button data-toggle="tooltip"><img src="assets/new.png" alt="" srcset=""></button>
+        <div class="wallet">
+          <p>Bolsillo</p>
+          <p>{{quantum}}</p>
+        </div>
         <img src="" alt="" srcset="">
         <img src="" alt="" srcset="">
         <img src="" alt="" srcset="">
       </ul>
     </div>
-  
+
     <!-- Modal -->
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog">
