adding and remove viewers to stream

--- a/src/app/components/stream-list/stream-list.component.html
+++ b/src/app/components/stream-list/stream-list.component.html
@@ -1,6 +1,6 @@
 <div class="body">
   <h2>{{platform}}</h2>
   <div class="cards">
-    <app-stream-card *ngFor="let stream of streamList" id={{stream._id}} url={{stream.url}} gamer={{stream.gamer}}></app-stream-card>
+    <app-stream-card *ngFor="let stream of streamList" _id={{stream._id}} url={{stream.url}} gamer={{stream.gamer}}></app-stream-card>
   </div>
 </div>
