--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,36 +1,30 @@
 <div class="bg-video">
-    <img src="assets/img/unsp.jpg" width="100%" height="100%" alt="">
+  <img src="assets/img/gamer.jpg" width="100%" height="100%" alt="">
+  <h1>
+    ¡DESCUBRE LO QUE TENEMOS PARA TI!
+  </h1>
+  <button id="vidBtn" (click)="signInWithFB()">
+    <i class="fa fa-facebook"></i>
+    Continuar con Facebook
+  </button>
+  <button id="vidBtn2" (click)="signInWithGoogle()">
+    <i class="fa fa-google"></i>
+    Continuar con Google
+  </button>
+  <button id="vidBtn1" (click)="signInWithGoogle()">
+    <i class="fa fa-twitch"></i>
+    Continuar con Twitch
+  </button>
+  <button id="vidBtn3" (click)="signOut()">
+    <i class="fa fa-sign-out"></i>
+    Cerrar sesion
+  </button>
+  <div *ngIf="user">
+    <img src="{{ photo }}">
     <div>
-        <div class="centrado">
-            <h1>
-                ¡DESCUBRE LO QUE TENEMOS PARA TI!
-            </h1>
-            <button id="vidBtn" (click)="signInWithFB()">
-                <i class="fa fa-facebook"></i>
-                Continuar con Facebook
-            </button>
-            <button id="vidBtn2" (click)="signInWithGoogle()">
-                <i class="fa fa-google"></i>
-                Continuar con Google
-            </button>
-            <button id="vidBtn1" (click)="signInWithGoogle()">
-                <i class="fa fa-twitch"></i>
-                Continuar con Twitch
-            </button>
-            <div>
-                <button id="vidBtn3" (click)="signOut()">
-                    <i class="fa fa-sign-out"></i>
-                    Cerrar sesion
-                </button>
-            </div>
-            <div *ngIf="user">
-                <img src="{{ photo }}">
-                <div>
-                    <h4>{{ user.name }}</h4>
-                    <p>{{ user.email }}</p>
-                </div>
-            </div>
-            <h5>¿No te has registrado?, <a (click)="signup()">¡Hazlo aquí!</a></h5>
-        </div>
+      <h4>{{ user.name }}</h4>
+      <p>{{ user.email }}</p>
     </div>
+  </div>
+  <!-- <h5>¿No te has registrado?, <a (click)="signup()">¡Hazlo aquí!</a></h5> -->
 </div>
