--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -12,11 +12,12 @@
 }
 
 .form {
+    margin-top: 5%;
     grid-area: form;
     text-align: center;
-    margin-top: 2%;
-    padding-left: 18%;
-    padding-right: 10%;
+    margin-right: 5%;
+    padding-left: 16%;
+    padding-right: 16%;
 }
 
 .image {
@@ -56,6 +57,7 @@
 
 #avatar {
     width: 90px;
+    margin-top: 15%;
 }
 
 #wave {
@@ -112,9 +114,4 @@ h1 {
 
 a {
     cursor: pointer;
-}
-
-select {
-    width: 90%;
-    margin-bottom: 2vh;
 }
