--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -13,9 +13,9 @@
       <li class="nav-item active">
         <a class="nav-link" [routerLink]="['home']">Inicio</a>
       </li>
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link" [routerLink]="['streamer']">Streamer</a>
-      </li>
+      </li> -->
       <li class="nav-item">
         <a class="nav-link" [routerLink]="['politica-de-privacidad']">Politica de privacidad</a>
       </li>
